WIP added trajectory stabilization

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -394,6 +394,77 @@
    "source": [
     "dircol_starship()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trajectory Stabilization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finite_horizon_lqr(x_traj, u_traj):\n",
+    "    builder = DiagramBuilder()\n",
+    "\n",
+    "    starship = Starship(0.001)\n",
+    "    starship_system = builder.AddSystem(starship.GetDiagram())\n",
+    "\n",
+    "    visualizer = MeshcatVisualizerCpp.AddToBuilder(builder, starship_system.GetOutputPort(\"geometry_query\"), meshcat)\n",
+    "    \n",
+    "    meshcat.Delete()\n",
+    "    \n",
+    "    Q = np.diag([#TODO])\n",
+    "    R = [#TODO]\n",
+    "    options = FiniteHorizonLinearQuadraticRegulatorOptions()\n",
+    "    options.Qf = = Q\n",
+    "\n",
+    "    options.x0 = x_traj\n",
+    "    options.u0 = u_traj\n",
+    "\n",
+    "    controller = builder.AddSystem(\n",
+    "        MakeFiniteHorizonLinearQuadraticRegulator(\n",
+    "            system = starship_system,\n",
+    "            context = starship.CreateDefaultContext(),\n",
+    "            t0 = x_traj.start_time(),\n",
+    "            tf = x_traj.end_time(),\n",
+    "            Q = Q,\n",
+    "            R = R,\n",
+    "            options = options))\n",
+    "    \n",
+    "    builder.Connect(controller.get_output_port(), starship_system.get_input_port())\n",
+    "    builder.Connect(starship_system.GetOutputPort('state'), controller.get_input_port())\n",
+    "\n",
+    "    diagram = builder.Build()\n",
+    "\n",
+    "    simulator = Simulator(diagram)\n",
+    "    context = simulator.get_mutable_context()\n",
+    "    starship_context = starship_system.GetMyContextFromRoot(context)\n",
+    "\n",
+    "    #TODO plot the desired state vs the actual state\n",
+    "\n",
+    "    simulator.set_target_realtime_rate(1.0)\n",
+    "    visualizer.StartRecording()\n",
+    "    simulator.AdvanceTo(5)\n",
+    "    visualizer.PublishRecording()\n",
+    "\n",
+    "    ani = visualizer.get_recording_as_animation()\n",
+    "    display(HTMP(ani.to_jshtml()))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finite_horizon_lqr() #todo pass in inputs from trajectory optimization"
+   ]
   }
  ],
  "metadata": {
