moved additional systems out of main notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,20 +19,19 @@
     "from pydrake.all import (AbstractValue, Cylinder, DiagramBuilder,\n",
     "                         DirectCollocation,\n",
     "                         FiniteHorizonLinearQuadraticRegulatorOptions,\n",
-    "                         FramePoseVector, LeafSystem, LeafSystem_,\n",
+    "                         FramePoseVector,\n",
     "                         LogVectorOutput,\n",
     "                         MakeFiniteHorizonLinearQuadraticRegulator,\n",
     "                         MeshcatVisualizerCpp, MultibodyPlant, Parser,\n",
     "                         PiecewisePolynomial, Rgba, RigidTransform,\n",
     "                         RotationMatrix, SceneGraph, Simulator, Solve,\n",
-    "                         StartMeshcat, TemplateSystem, TrajectorySource,\n",
+    "                         StartMeshcat, TrajectorySource,\n",
     "                         namedview,\n",
     "                         AddMultibodyPlantSceneGraph,\n",
-    "                         Wing, ConstantVectorSource,ExternallyAppliedSpatialForce, BasicVector,\n",
+    "                         Wing, ConstantVectorSource,\n",
     "                         SpatialVelocity, DirectTranscription)\n",
     "\n",
-    "#from underactuated import FindResource\n",
-    "#from underactuated.scenarios import AddShape\n"
+    "from lib.systems import Barometer, SpatialForceConcatinator"
    ]
   },
   {
@@ -64,98 +63,6 @@
    "source": [
     "## Starship Crossection\n",
     "![imgage](https://everydayastronaut.com/wp-content/uploads/Articles/Belly_Flop/Belly-Flop-MAIN-Reshoot.00_08_53_06.Still003-800x450.jpg)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Define Helper Systems"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@TemplateSystem.define(\"SpatialForceConcatinator_\")\n",
-    "def SpatialForceConcatinator_(T):\n",
-    "    class Impl(LeafSystem_[T]):\n",
-    "        def _construct(self, N_inputs, converter = None):\n",
-    "            LeafSystem_[T].__init__(self, converter)\n",
-    "            self.N_inputs = N_inputs\n",
-    "            self.Input_ports = [self.DeclareAbstractInputPort(f\"Spatial_Force_{i}\",\n",
-    "                                AbstractValue.Make([ExternallyAppliedSpatialForce()])) for i in range(N_inputs)]\n",
-    "        \n",
-    "            self.DeclareAbstractOutputPort(\"Spatial_Forces\",\n",
-    "                                           lambda: AbstractValue.Make(\n",
-    "                                               [ExternallyAppliedSpatialForce()for i in range(N_inputs)]),\n",
-    "                                           self.Concatenate)\n",
-    "\n",
-    "        def Concatenate(self, context, output):\n",
-    "            out = []\n",
-    "            for port in self.Input_ports:\n",
-    "                out += port.Eval(context)\n",
-    "            output.set_value(out)\n",
-    "        \n",
-    "        def _construct_copy(self, other, converter=None,):\n",
-    "            Impl._construct(self, other.N_inputs, converter=converter)\n",
-    "    \n",
-    "    return Impl\n",
-    "\n",
-    "SpatialForceConcatinator = SpatialForceConcatinator_[None] #default insantiation\n",
-    "\n",
-    "@TemplateSystem.define(\"Barometer_\")\n",
-    "def Barometer_(T):\n",
-    "    class Impl(LeafSystem_[T]):\n",
-    "        def _construct(self, body_index, P0 = 101325.0, rho0 = 1.2250, T0 = 288.15,\n",
-    "                       L0 = -0.0065, h0 = 0.0, g = 9.80665, M = 0.0289644, converter = None):\n",
-    "            LeafSystem_[T].__init__(self, converter)\n",
-    "        \n",
-    "            self.body_index = body_index\n",
-    "            self.P0 = P0 #reference pressure (Pa)\n",
-    "            self.rho0 = rho0 #reference density (kg/m^3)\n",
-    "            self.T0 = T0 #reference temperature (K)\n",
-    "            self.L0 = L0 #temperature lapse rate (k/m)\n",
-    "            self.h0 = h0 #height of reference level (m)\n",
-    "            self.g = g #gravitational acceleration (m/s^2)\n",
-    "            self.M = M #molar mass of air (kg/mol)\n",
-    "        \n",
-    "            self.R = 9.31444598 # universal gas constant (J/(mol*K ))\n",
-    "        \n",
-    "        \n",
-    "            self.Pose_port = self.DeclareAbstractInputPort(\"body_poses_input_port\",AbstractValue.Make([RigidTransform()]))\n",
-    "        \n",
-    "            self.DeclareVectorOutputPort(\"Pressure\", 1, self.CalcPressure)\n",
-    "            self.DeclareVectorOutputPort(\"Density\", 1, self.CalcDensity)\n",
-    "        \n",
-    "        def CalcPressure(self, context, output):\n",
-    "            h = self.Pose_port.Eval(context)[self.body_index].translation()[2]\n",
-    "        \n",
-    "            if self.L0 == 0:\n",
-    "                P = self.P0 * np.exp(-self.g * self.M * (h - self.h0) / (self.R * self.T0))\n",
-    "            else:\n",
-    "                P = self.P0 * (1 + (h - self.h0) * self.L0 / self.T0) ** (-self.g * self.M / (self.R * self.L0))\n",
-    "            output.SetFromVector(np.array([P]))\n",
-    "        \n",
-    "        def CalcDensity(self, context, output):\n",
-    "            h = self.Pose_port.Eval(context)[self.body_index].translation()[2]\n",
-    "        \n",
-    "            if self.L0 == 0:\n",
-    "                rho = self.rho0 * np.exp(-self.g * self.M * (h - self.h0) / (self.R * self.T0))\n",
-    "            else:\n",
-    "                rho = self.rho0 * (self.T0 / (self.T0 + (h - self.h0) * self.L0)) ** (1 + self.g * self.M / (self.R * self.L0))\n",
-    "            output.SetFromVector(np.array([rho]))\n",
-    "        \n",
-    "        def _construct_copy(self, other, converter=None,):\n",
-    "            Impl._construct(self, other.body_index, other.P0, other.rho0, other.T0, other.L0,\n",
-    "                            other.h0, other.g, other.M, converter=converter)\n",
-    "    \n",
-    "    return Impl\n",
-    "\n",
-    "\n",
-    "Barometer = Barometer_[None] #default insantiation\n"
    ]
   },
   {
@@ -295,13 +202,6 @@
     "simulator.AdvanceTo(5)\n",
     "visualizer.PublishRecording()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
