--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -26,7 +26,7 @@
     "                         PiecewisePolynomial, Rgba, RigidTransform,\n",
     "                         RotationMatrix, SceneGraph, Simulator, Solve,\n",
     "                         StartMeshcat, TrajectorySource,\n",
-    "                         namedview,\n",
+    "                         namedview, JointIndex,\n",
     "                         AddMultibodyPlantSceneGraph,\n",
     "                         Wing, ConstantVectorSource,\n",
     "                         SpatialVelocity, DirectTranscription)\n",
@@ -139,6 +139,7 @@
     "        builder.Connect(concat.get_output_port(0), plant.get_applied_spatial_force_input_port())\n",
     "    \n",
     "        builder.ExportOutput(scene_graph.get_query_output_port(), \"geometry_query\")\n",
+    "        builder.ExportInput(plant.get_actuation_input_port())\n",
     "\n",
     "        diagram = builder.Build()\n",
     "        \n",
@@ -152,7 +153,45 @@
     "        return self.plant_\n",
     "    \n",
     "    def CreateDefaultContext(self):\n",
-    "        return self.diagram_.CreateDefaultContext()"
+    "        return self.diagram_.CreateDefaultContext()\n",
+    "    \n",
+    "    def MakeNamedView(self):\n",
+    "        names_pos = [None]*self.plant_.num_positions()\n",
+    "        for ind in range(self.plant_.num_joints()):\n",
+    "            joint = self.plant_.get_joint(JointIndex(ind))\n",
+    "            # TODO: Handle planar joints, etc.\n",
+    "            assert(joint.num_positions() == 1)\n",
+    "            names_pos[joint.position_start()] = joint.name() + \"_p\"\n",
+    "        for ind in self.plant_.GetFloatingBaseBodies():\n",
+    "            body = self.plant_.get_body(ind)\n",
+    "            start = body.floating_positions_start()\n",
+    "            body_name = body.name()\n",
+    "            names_pos[start] = body_name+'_qw'\n",
+    "            names_pos[start+1] = body_name+'_qx'\n",
+    "            names_pos[start+2] = body_name+'_qy'\n",
+    "            names_pos[start+3] = body_name+'_qz'\n",
+    "            names_pos[start+4] = body_name+'_x'\n",
+    "            names_pos[start+5] = body_name+'_y'\n",
+    "            names_pos[start+6] = body_name+'_z'\n",
+    "        \n",
+    "        names_vel = [None]*self.plant_.num_velocities()\n",
+    "        for ind in range(self.plant_.num_joints()):\n",
+    "            joint = self.plant_.get_joint(JointIndex(ind))\n",
+    "            # TODO: Handle planar joints, etc.\n",
+    "            assert(joint.num_velocities() == 1)\n",
+    "            names_vel[joint.velocity_start()] = joint.name() + \"_v\"\n",
+    "        for ind in self.plant_.GetFloatingBaseBodies():\n",
+    "            body = self.plant_.get_body(ind)\n",
+    "            start = body.floating_velocities_start() - self.plant_.num_positions()\n",
+    "            body_name = body.name()\n",
+    "            names_vel[start] = body_name+'_wx'\n",
+    "            names_vel[start+1] = body_name+'_wy'\n",
+    "            names_vel[start+2] = body_name+'_wz'\n",
+    "            names_vel[start+3] = body_name+'_vx'\n",
+    "            names_vel[start+4] = body_name+'_vy'\n",
+    "            names_vel[start+5] = body_name+'_vz'\n",
+    "        \n",
+    "        return namedview(\"state\", names_pos + names_vel)"
    ]
   },
   {
@@ -197,6 +236,8 @@
     "                                          V_WB=V_WB)\n",
     "\n",
     "\n",
+    "starship_plant.get_actuation_input_port().FixValue(plant_context, np.zeros(4))\n",
+    "\n",
     "simulator.set_target_realtime_rate(1.0)\n",
     "visualizer.StartRecording()\n",
     "simulator.AdvanceTo(5)\n",
@@ -230,6 +271,8 @@
     "    context = diagram.CreateDefaultContext()\n",
     "    diagram.Publish(context)\n",
     "\n",
+    "\n",
+    "\n",
     "    x_traj = None\n",
     "    u_traj = None\n",
     "    # SNOPT is more reliable if we solve it twice.\n",
@@ -238,8 +281,7 @@
     "    prog = dirtran.prog()\n",
     "    \n",
     "    #input limits\n",
-    "    u = dirtran.input()\n",
-    "    print(u)\n"
+    "    u = dirtran.input()\n"
    ]
   },
   {
@@ -263,6 +305,8 @@
     "    starship = Starship(0)\n",
     "    starship_system = builder.AddSystem(starship.GetDiagram())\n",
     "\n",
+    "    starship_plant = starship.GetPlant()\n",
+    "\n",
     "    visualizer = MeshcatVisualizerCpp.AddToBuilder(builder, starship_system.GetOutputPort(\"geometry_query\"), meshcat)\n",
     "\n",
     "    meshcat.Delete()\n",
@@ -270,6 +314,20 @@
     "    diagram = builder.Build()\n",
     "    context = diagram.CreateDefaultContext()\n",
     "    diagram.Publish(context)\n",
+    "    \n",
+    "    plant_context = starship_plant.GetMyContextFromRoot(context)\n",
+    "\n",
+    "    #initial condition\n",
+    "    V_WB = SpatialVelocity(w=[0, 0, 0], v=[0,0,-20])\n",
+    "    X_WB = RigidTransform(RotationMatrix.MakeYRotation(-np.pi/8),[0, 0, 50])\n",
+    "\n",
+    "    starship_plant.SetFreeBodyPose(plant_context,\n",
+    "                                starship_plant.GetBodyByName(\"body\"), X_WB)\n",
+    "    starship_plant.SetFreeBodySpatialVelocity(context=plant_context,\n",
+    "                                            body=starship_plant.GetBodyByName(\"body\"),\n",
+    "                                            V_WB=V_WB)\n",
+    "\n",
+    "    q0 = np.hstack([starship_plant.GetPositions(plant_context),  starship_plant.GetVelocities(plant_context)])\n",
     "\n",
     "    x_traj = None\n",
     "    u_traj = None\n",
@@ -282,8 +340,50 @@
     "        \n",
     "        #input limits\n",
     "        u = dircol.input()\n",
+    "        for i in range(len(u)):\n",
+    "            elevator_velocity_limit = 13  # max servo velocity (rad/sec)\n",
+    "            dircol.AddConstraintToAllKnotPoints(-elevator_velocity_limit <= u[i])\n",
+    "            dircol.AddConstraintToAllKnotPoints(u[i] <= elevator_velocity_limit)\n",
     "\n",
-    "        break"
+    "        #inital conditions\n",
+    "        prog.AddBoundingBoxConstraint(q0[:], q0[:], dircol.initial_state())\n",
+    "        context.SetContinuousState(q0[:])\n",
+    "        diagram.Publish(context)\n",
+    "\n",
+    "        # Joint positions and velocities\n",
+    "        StateView = starship.MakeNamedView()\n",
+    "        sf = StateView(dircol.final_state())\n",
+    "        prog.AddBoundingBoxConstraint(0, 0, sf.body_wx) #Roll constraint\n",
+    "\n",
+    "\n",
+    "        #State Constraints\n",
+    "        s = StateView(dircol.state())\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Leg_R_p <= 1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Leg_R_p >= -1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Leg_L_p <= 1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Leg_L_p >= -1.57)\n",
+    "\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Arm_R_p <= 1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Arm_R_p >= -1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Arm_L_p <= 1.57)\n",
+    "        dircol.AddConstraintToAllKnotPoints(s.Joint_Arm_L_p >= -1.57)\n",
+    "\n",
+    "        # Cost\n",
+    "        dircol.AddRunningCost(u.dot(u))\n",
+    "\n",
+    "        sf_d = StateView(np.zeros(21))\n",
+    "        sf_d.body_wx = 0\n",
+    "        prog.AddQuadraticErrorCost(np.diag([0,0,0,0,0,0,0,\n",
+    "                                            0,0,0,0,\n",
+    "                                            10, 0, 0, 0, 0, 0,\n",
+    "                                            0,0,0,0]), sf_d[:],\n",
+    "                                dircol.final_state())\n",
+    "\n",
+    "        result = Solve(prog)\n",
+    "        assert result.is_success()\n",
+    "\n",
+    "        x_traj = dircol.ReconstructStateTrajectory(result)\n",
+    "        u_traj = dircol.ReconstructInputTrajectory(result)"
    ]
   },
   {
