changed COP of arm wings

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -111,11 +111,11 @@
     "                                      surface_area = 47.859, fluid_density = 1.204))\n",
     "\n",
     "        Arm_R = builder.AddSystem(Wing(body_index = plant.GetFrameByName(\"Link_Arm_R\").body().index(),\n",
-    "                                      X_BodyWing = RigidTransform(p = [0.22,-1.24,0]),\n",
+    "                                      X_BodyWing = RigidTransform(p = [0,-1.26,0]),\n",
     "                                      surface_area = 16.295, fluid_density = 1.204))\n",
     "\n",
     "        Arm_L = builder.AddSystem(Wing(body_index = plant.GetFrameByName(\"Link_Arm_L\").body().index(),\n",
-    "                                      X_BodyWing = RigidTransform(p = [0.22,1.24,0]),\n",
+    "                                      X_BodyWing = RigidTransform(p = [0,1.26,0]),\n",
     "                                       surface_area = 16.295, fluid_density = 1.204))\n",
     "\n",
     "        wings = [belly_1, belly_2, Leg_R, Leg_L, Arm_R, Arm_L]\n",
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirtran_starship()"
+    "#dirtran_starship()"
    ]
   },
   {
